<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="0.4"
            android:background="@drawable/bg_wasla">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/image_content_description"
                android:src="@drawable/im_wasla" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"
                android:background="@drawable/bg_rectangle"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:onClick="openEmail"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/email"
                        android:onClick="openEmail"
                        android:textColor="#D6D4D5"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:id="@+id/email"
                        android:background="@android:color/transparent"
                        android:gravity="end"
                        android:inputType="textEmailAddress"
                        android:textAlignment="textEnd"
                        android:textSize="12sp"
                        tools:ignore="LabelFor" />


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#D6D4D5" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:onClick="openPassword"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/password"
                        android:textColor="#D6D4D5"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:gravity="end"
                        android:id="@+id/password"
                        android:inputType="textPassword"
                        android:textAlignment="textEnd"
                        android:textSize="12sp"
                        tools:ignore="LabelFor" />


                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_button"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:paddingTop="20dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:id="@+id/sign_up_button"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/new_user"
                        android:textColor="#A6A6A6"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/sign_up"
                        android:textColor="#3DC5EB"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/forgot"
                        android:textColor="#A6A6A6"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/password_forgot"
                        android:textColor="#3DC5EB"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                </LinearLayout>


            </LinearLayout>

            <Button
                android:id="@+id/facebook_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_facebook_button"
                android:drawableLeft="@drawable/ic_facebook"
                android:drawableStart="@drawable/ic_facebook"
                android:padding="10dp"
                android:textSize="12sp"
                android:text="@string/facebook"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="5dp"
                android:id="@+id/google_login"
                android:textSize="12sp"
                android:background="@drawable/bg_google_button"
                android:drawableLeft="@drawable/ic_google"
                android:drawableStart="@drawable/ic_google"
                android:padding="10dp"
                android:text="@string/google"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>