<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_wasla"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context=".ui.WhereYouGoActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_content_description"
            android:padding="15dp"
            android:src="@drawable/ic_menu" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="40dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Credit"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:text="@string/Credit"
                android:textColor="#FFFFFF"
                android:layout_gravity="center" />

            <Button
                android:layout_width="match_parent"
                android:textAllCaps="false"
                android:id="@+id/active_ride"
                android:layout_marginBottom="10dp"
                android:visibility="gone"
                android:textColor="#FFFFFF"
                android:background="@drawable/bg_button_red"
                android:text="@string/open_active_ride"
                android:layout_height="35dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/where_you_go"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="3dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:descendantFocusability="beforeDescendants"
                    android:focusableInTouchMode="true"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/points"
                        android:layout_width="10dp"
                        android:layout_height="65dp"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/image_content_description"
                        android:scaleType="fitXY"
                        android:src="@drawable/im_points" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_toEndOf="@id/points"
                        android:layout_toRightOf="@id/points"
                        android:descendantFocusability="beforeDescendants"
                        android:focusableInTouchMode="true"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/current_location"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@android:color/transparent"
                            android:drawableEnd="@drawable/ic_location"
                            android:drawableRight="@drawable/ic_location"
                            android:ellipsize="end"
                            android:focusableInTouchMode="false"
                            android:hint="@string/your_location"
                            android:inputType="text"
                            android:lines="1"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:textSize="12sp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="10dp"
                            android:background="#D6D4D5" />


                        <EditText
                            android:id="@+id/to_location"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="13dp"
                            android:background="@android:color/transparent"
                            android:drawableEnd="@drawable/ic_arrow_down"
                            android:drawableRight="@drawable/ic_arrow_down"
                            android:ellipsize="end"
                            android:focusableInTouchMode="false"
                            android:hint="@string/where_to_go"
                            android:inputType="text"
                            android:lines="1"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:textSize="12sp" />

                    </LinearLayout>


                </RelativeLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="3dp">

                <TextView
                    android:id="@+id/date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_date"
                    android:drawableLeft="@drawable/ic_date"
                    android:drawablePadding="5dp"
                    android:paddingLeft="5dp"
                    android:paddingTop="10dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="10dp"
                    android:text="@string/date"
                    android:textColor="#A6A6A6"
                    android:textSize="12sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="3dp">

                <TextView
                    android:id="@+id/time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_time"
                    android:drawableLeft="@drawable/ic_time"
                    android:drawablePadding="5dp"
                    android:paddingLeft="5dp"
                    android:paddingTop="10dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="10dp"
                    android:text="@string/time"
                    android:textColor="#A6A6A6"
                    android:textSize="12sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="3dp">

                <EditText
                    android:id="@+id/seats"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_seat"
                    android:drawableLeft="@drawable/ic_seat"
                    android:drawablePadding="5dp"
                    android:hint="@string/seats"
                    android:inputType="number"
                    android:maxLength="1"
                    android:paddingLeft="5dp"
                    android:paddingTop="10dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="10dp"
                    android:textColor="#A6A6A6"
                    android:textSize="12sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:paddingLeft="5dp"
                    android:paddingTop="10dp"
                    android:orientation="vertical"
                    android:paddingRight="5dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:textColor="#A6A6A6"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="5dp"
                        android:layout_height="wrap_content"
                        android:text="@string/gender_preferred"
                        android:textSize="12sp"/>

                    <RadioGroup
                        android:id="@+id/gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="5dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/male_radio"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:checked="false"
                            android:text="@string/male"
                            android:textColor="#A6A6A6"
                            android:textSize="12sp" />


                        <RadioButton
                            android:id="@+id/female_radio"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:checked="false"
                            android:text="@string/female"
                            android:textColor="#A6A6A6"
                            android:textSize="12sp" />

                    </RadioGroup>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="5dp"
                    android:paddingTop="10dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="10dp">

                    <CheckBox
                        android:id="@+id/daily"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.85"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/daily_trip"
                        android:textColor="#A6A6A6"
                        android:textSize="12sp" />

                    <Spinner
                        android:id="@+id/days"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0.15" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/post_a_ride_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_button"
                android:text="@string/post_a_ride"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <Button
                android:id="@+id/find_a_ride_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_button_orange"
                android:text="@string/find_a_ride"
                android:textColor="@android:color/white"
                android:textSize="12sp" />


        </LinearLayout>

    </RelativeLayout>


</ScrollView>